# packvote

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  REQUIREMENTS.md
backend/: .env.example  nixpacks.toml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_move_pin_to_participants.py  0003_add_raw_response_to_ai_call_logs.py  0004_add_generation_error_to_trips.py  0005_participant_user_id.py  0006_drop_vote_user_id.py  0007_add_option_title_to_itineraries.py  0008_add_password_reset_to_users.py  0009_jsonb_fields.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  participants.py  trips.py  unsplash.py  votes.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ai_call_log.py  itinerary.py  metric.py  participant.py  preference.py  prompt_template.py  trip.py  user.py  vote.py  vote_round.py
backend/app/prompts/: __init__.py
backend/app/schemas/: ai_call_log.py  itinerary.py  participant.py  preference.py  trip.py  user.py  vote.py
backend/app/services/: email_resend.py  generation.py  participants.py  trips.py  unsplash.py
backend/tests/: conftest.py
backend/tests/ai/: conftest.py  test_generation_live.py
backend/tests/integration/: conftest.py  test_admin_resend.py  test_trip_lifecycle.py  test_unsplash_api.py
backend/tests/unit/: conftest.py  test_ai_cerebras.py  test_ai_groq.py  test_ai_huggingface.py  test_ai_service.py  test_auth.py  test_brevo_rate_limiter.py  (+12 more)
(+100 files in other folders)
